# aioinject

./: .coveragerc  .editorconfig  .gitignore  .gitlab-ci.yml  404.html  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  index.html  mkdocs.yml  pyproject.toml  readme.md
.github/workflows/: deploy-docs.yaml  lint.yaml  publish.yml  test.yaml
aioinject/: __init__.py  _store.py  _types.py  _utils.py  containers.py  context.py  decorators.py  extensions.py  markers.py  module.py  providers.py  utils.py
aioinject/_features/: codegen.py  generics.py
aioinject/ext/: aiogram.py  fastapi.py  litestar.py  strawberry.py
aioinject/extensions/: __init__.py  _abc.py  builtin.py
aioinject/validation/: __init__.py  _builtin.py  _validate.py  abc.py  error.py
benchmark/: container.py  dependencies.py  dto.py  main.py
benchmark/benches/: _common.py  dishka.py  fastapi.py  litestar.py  python.py  strawberry.py
code/: example.py
code/contextmanagers/: 01_context.py  02_container.py  03_implicity.py
code/cookbook/: pydantic-settings.py
code/extensions/: lifespan.py  on_init.py
code/integrations/: aiogram_.py  strawberry-graphql.py
code/providers/: scoped.py  singleton.py
context-managers/: index.html
cookbook/: index.html
dependency_depression/: __init__.py  containers.py  context.py  decorators.py  markers.py  providers.py
dependency_depression/ext/: fastapi.py  strawberry.py
docs/: context-managers.md  cookbook.md  extensions.md  index.md  providers.md
docs/code/: example.py
docs/code/contextmanagers/: 03_implicity.py
docs/code/extensions/: on_resolve.py
docs/code/integrations/: aiogram_.py  fastapi_.py  litestar_.py  strawberry-graphql.py
docs/code/providers/: transient.py
docs/integrations/: aiogram.md  fastapi.md  litestar.md  strawberry-graphql.md
examples/: fastapi.md  litestar.md  strawberry-graphql.md
extensions/: index.html
integrations/aiogram/: index.html
integrations/fastapi/: index.html
integrations/litestar/: index.html
integrations/strawberry-graphql/: index.html
providers/: index.html
search/: search_index.json
tests/: conftest.py  test_container.py  test_context.py  test_extensions.py  test_inject.py  test_module.py  test_utils.py  utils_.py
tests/container/: test_container.py  test_future_annotations.py  test_override.py
tests/container/mod_tests/: provider_fn_deferred_dep_misuse.py  provider_fn_with_deffered_dep.py
tests/context/: conftest.py  test_context.py  test_context_managers.py  test_execute.py  test_register.py
tests/ext/: conftest.py  test_aiogram.py  utils.py
tests/ext/fastapi/: conftest.py  test_fastapi.py
tests/ext/litestar/: conftest.py  test_lifespan.py  test_litestar.py
tests/ext/strawberry/: app.py  conftest.py  test_inject_decorator.py  test_strawberry.py
tests/extensions/: mypy_test.py  test_lifespan.py  test_on_init.py  test_on_resolve_async.py  test_on_resolve_sync.py
tests/extensions/builtin/: test_dependency_extraction.py
tests/features/: test_generics.py  test_generics_future_annotations.py
tests/providers/: test_base.py  test_callable.py  test_object.py  test_scoped.py  test_singleton.py  test_transient.py
tests/stores/: test_store.py
tests/utils/: test_enter_context.py  test_guess_impl.py  test_utils.py
tests/validation/: test_dependency_validator.py  test_lifetime_validator.py  test_provider_dependency_validator.py
